Wed Aug  1 01:37:41 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/sets.c: fixed bugs in exsltTrailingFunction and
	  exsltLeadingFunction when passing an empty node-set as the
	  second argument
	* libxslt/functions.[ch]: gave priority to context-level functions
	  over extension module functions. This allows a function declared
	  with a func:function element to override an extension module
	  function for example. This is a bit hackish...
	* tests/exslt/sets/{lead,trail}ing.1.out: fixed errors. The result
	  values didn't conform to the expected values. This is a bug in
	  the EXSLT official use cases.

Tue Jul 31 23:53:55 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* config.h.in configure.in libxslt/extra.c: tried to integrate
	  Norm's implemntation of localTime()

Tue Jul 31 03:47:10 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extra.c: fixed a serious proble is node-set was called
	  on a nodeset
	* tests//*/Makefile.am: fixed the rule to rebuild xsltproc

Lun Jul 30 05:47:43 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libexslt/functions.c: fixed memory leaks
	
Sun Jul 29 08:37:59 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libexslt/functions.c libxslt/extensions.[ch] libxslt/extensions.h
	  libxslt/xslt.[hc] libxslt/xsltInternals.h xsltproc/xsltproc.c:
	  more cleanup of the problems introduced with EXSLT, also closes
	  bug #58180

Sat Jul 28 08:25:05 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/internals.html - general cleanup

Fri Jul 27 04:00:38 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* configure.in tests/Makefile.am tests/exslt/*: added some tests
	  to check EXSLT conformance
	* libexslt/sets.c: fixed a typo when registering has-same-node

Fri Jul 27 12:33:52 EDT 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/extensions.c xsltproc/xsltproc.c: quick cleanup
	  of memory allocations, raise a bug in the test suite, also
	  need to be centralized as a single cleanup function.
