@@ -1,3 +1,7 @@
+Wed Aug  1 10:37:50 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/extra.c: one more revision on Norm's localTime() function
+
 Wed Aug  1 01:37:41 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>
 
 	* libexslt/sets.c: fixed bugs in exsltTrailingFunction and
